--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "fluent-ffmpeg": "^2.1.3",
+    "piscina": "^4.9.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
